--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
+    "font-awesome": "*"
   }
 }
