--- a/package.json
+++ b/package.json
@@ -6,13 +6,13 @@
   },
   "devDependencies": {
     "bootstrap-sass": "^3.3.7",
+    "compass-mixins": "^0.12.10",
+    "font-awesome": "*",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
     "jquery-ui-dist": "^1.12.1",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2",
-    "font-awesome": "*",
-    "compass-mixins": "^0.12.10"
+    "laravel-elixir-webpack-official": "^1.0.2"
   }
 }
