--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery-ui-dist": "^1.12.1",
     "laravel-elixir": "^6.0.0-14",
     "laravel-elixir-vue-2": "^0.2.0",
-    "laravel-elixir-webpack-official": "^1.0.2"
+    "laravel-elixir-webpack-official": "^1.0.2",
+    "vue": "^2.3.4"
   }
 }
