--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "vue": "^2.3.4"
+  },
+  "dependencies": {
+    "fullpage.js": "^2.9.5"
   }
 }
